Revert "example: change file names"
This reverts commit a8941c9ccf1b4a6b2a18abdd710872498d91d42c.

--- a/examples/basic_vxlan_v6/vxlan_mp2mp_v6.yaml
+++ b/examples/basic_vxlan_v6/vxlan_mp2mp_v6.yaml
@@ -48,24 +48,30 @@ switches:
 node_configs:
   - name: R1
     cmds:
+
       - cmd: bash -c "enable_seg6_router.py | sh"
       - cmd: ip link set net0 address 52:54:00:aa:01:00
       - cmd: ip link set net1 address 52:54:00:aa:01:01
       - cmd: ip link set net2 address 52:54:00:aa:01:02
+
+      - cmd: ip addr add 2001:aaa::1 dev lo
+      - cmd: ip addr add 2001::1/64 dev net0
+      - cmd: ip route add 2001:bbb::1 via 2001::2 dev net0
+      - cmd: ip route add 2001:ccc::1 via 2001::3 dev net0
 
       - cmd: ip link add br100 type bridge
       - cmd: ip link set dev br100 up
       - cmd: ip addr add 2001:111::1/64 dev br100
       - cmd: >-
           ip link add vxlan100 type vxlan id 100
-          dstport 4789 group ff08::1 dev net0
+          dstport 4789 local 2001:aaa::1
 
       - cmd: ip link add br200 type bridge
       - cmd: ip link set dev br200 up
       - cmd: ip addr add 2001:222::1/64 dev br200
       - cmd: >-
           ip link add vxlan200 type vxlan id 200
-          dstport 4789 group ff08::2 dev net0
+          dstport 4789 local 2001:aaa::1
 
       - cmd: ip link set dev net1 master br100
       - cmd: ip link set dev net1 promisc on
@@ -81,26 +87,37 @@ node_configs:
       - cmd: ip link set dev vxlan200 promisc on
       - cmd: ip link set dev vxlan200 up
 
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan100 self dst 2001:bbb::1 vni 100 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan100 self dst 2001:ccc::1 vni 100 port 4789
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan200 self dst 2001:bbb::1 vni 200 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan200 self dst 2001:ccc::1 vni 200 port 4789
+
   - name: R2
     cmds:
+
       - cmd: bash -c "enable_seg6_router.py | sh"
       - cmd: ip link set net0 address 52:54:00:aa:02:00
       - cmd: ip link set net1 address 52:54:00:aa:02:01
       - cmd: ip link set net2 address 52:54:00:aa:02:02
+
+      - cmd: ip addr add 2001:bbb::1 dev lo
+      - cmd: ip addr add 2001::2/64 dev net0
+      - cmd: ip route add 2001:aaa::1 via 2001::1 dev net0
+      - cmd: ip route add 2001:ccc::1 via 2001::3 dev net0
 
       - cmd: ip link add br100 type bridge
       - cmd: ip link set dev br100 up
       - cmd: ip addr add 2001:111::2/64 dev br100
       - cmd: >-
           ip link add vxlan100 type vxlan id 100
-          dstport 4789 group ff08::1 dev net0
+          dstport 4789 local 2001:bbb::1
 
       - cmd: ip link add br200 type bridge
       - cmd: ip link set dev br200 up
       - cmd: ip addr add 2001:222::2/64 dev br200
       - cmd: >-
           ip link add vxlan200 type vxlan id 200
-          dstport 4789 group ff08::2 dev net0
+          dstport 4789 local 2001:bbb::1
 
       - cmd: ip link set dev net1 master br100
       - cmd: ip link set dev net1 promisc on
@@ -116,26 +133,37 @@ node_configs:
       - cmd: ip link set dev vxlan200 promisc on
       - cmd: ip link set dev vxlan200 up
 
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan100 self dst 2001:aaa::1 vni 100 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan100 self dst 2001:ccc::1 vni 100 port 4789
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan200 self dst 2001:aaa::1 vni 200 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan200 self dst 2001:ccc::1 vni 200 port 4789
+
   - name: R3
     cmds:
+
       - cmd: bash -c "enable_seg6_router.py | sh"
       - cmd: ip link set net0 address 52:54:00:aa:03:00
       - cmd: ip link set net1 address 52:54:00:aa:03:01
       - cmd: ip link set net2 address 52:54:00:aa:03:02
+
+      - cmd: ip addr add 2001:ccc::1 dev lo
+      - cmd: ip addr add 2001::3/64 dev net0
+      - cmd: ip route add 2001:aaa::1 via 2001::1 dev net0
+      - cmd: ip route add 2001:bbb::1 via 2001::2 dev net0
 
       - cmd: ip link add br100 type bridge
       - cmd: ip link set dev br100 up
       - cmd: ip addr add 2001:111::3/64 dev br100
       - cmd: >-
           ip link add vxlan100 type vxlan id 100
-          dstport 4789 group ff08::1 dev net0
+          dstport 4789 local 2001:ccc::1
 
       - cmd: ip link add br200 type bridge
       - cmd: ip link set dev br200 up
       - cmd: ip addr add 2001:222::3/64 dev br200
       - cmd: >-
           ip link add vxlan200 type vxlan id 200
-          dstport 4789 group ff08::2 dev net0
+          dstport 4789 local 2001:ccc::1
 
       - cmd: ip link set dev net1 master br100
       - cmd: ip link set dev net1 promisc on
@@ -150,6 +178,11 @@ node_configs:
       - cmd: ip link set dev vxlan200 master br200
       - cmd: ip link set dev vxlan200 promisc on
       - cmd: ip link set dev vxlan200 up
+
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan100 self dst 2001:aaa::1 vni 100 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan100 self dst 2001:bbb::1 vni 100 port 4789
+      - cmd: bridge fdb add 00:00:00:00:00:00 dev vxlan200 self dst 2001:aaa::1 vni 200 port 4789
+      - cmd: bridge fdb append 00:00:00:00:00:00 dev vxlan200 self dst 2001:bbb::1 vni 200 port 4789
 
   - name: C1
     cmds:
@@ -182,6 +215,7 @@ node_configs:
       - cmd: ip link set net0 address 52:54:00:bb:06:00
       - cmd: ip addr add 2001:222::c6/64 dev net0
 
+
 test:
   - cmds:
     - cmd: docker exec C1 ping -c2 2001:111::c3
@@ -190,5 +224,4 @@ test:
     - cmd: docker exec C2 ping -c2 2001:222::c4
     - cmd: docker exec C2 ping -c2 2001:222::c6
     - cmd: docker exec C4 ping -c2 2001:222::c6
-
 
